# riscos-gccsdk

./: .gitignore  README.md
gcc/: .cvsignore  CHANGES  Makefile  Makefile.in  README  TODO  acconfig.h  configure.in  do-configure  mkinstalldirs
gcc/config/: freebsd.mk  linux.mk  local.mk  riscos.mk
gcc/cross-progs/: Makefile
gcc/cross-progs/arm-simulator/: ChangeLog  Makefile  arm-dis.c  armdebug-new.c  armdebug.c  armdepen.c  armemu-new.c  armemu.c  armfpe.h  armhdr.h  armrom.h  armswi.c  armswis.h  hello  powers
gcc/gcc/: Makefile
gcc/gcc/boehm-gc/: Makefile
gcc/gcc/fastjar/: Makefile  config.h
gcc/gcc/gcc/: .cvsignore  Makefile  Makefile.in  Makelibs  acconfig.h  aclocal.m4  auto-host-riscos.h  auto-host.h  auto-host.h.in  aux-output.c  bconfig.h  builtins.c  c-incpath.c  c-opts.c  c-parse.c  c-parse.h  c-parse.y  c.opt  cexp.c  cfgcleanup.c  config.h  configargs.h  configure.in  coverage.c  cppdefault.c  cppdefault.h  cpperror.c  cppfiles.c  cppinit.c  cpplib.c  cppspec.c  dbxout.c  diagnostic.c  dwarf2out.c  explow.c  expr.c  final.c  fold-const.c  function.c  gcc.c  (+53 more)
gcc/gcc/libf2c/: Makefile  Makefile1  Update,feb  g2c.h
gcc/gcc/libffi/: Makefile
gcc/gcc/libgcc/: .cvsignore  Makefile  aof-convert.pl  fp-bit.c  ieee754-df.S  lib1aof.s  lib1funcs-aof.S
gcc/gcc/libgcov/: Makefile
gcc/gcc/libgpc/: Makefile  endian.gpi  error.gpi  filename.gpi  files.gpi  getopt.gpi  gpc.gpi  gpc.gpm  gpc_bp.gpi  gpc_delphi.gpi  gpc_ep.gpi  gpc_sp.gpi  heap.gpi  init.gpi  internal.gpi  math.gpi  move.gpi  numtodec.gpi  random.gpi  sets.gpi  string.gpi  string2.gpi  time.gpi
gcc/gcc/libio/: Makefile  Makefile1  Update,feb  _G_config.h  builtinbuf.ii  streambuf.cc
gcc/gcc/libjava/: Makefile  Makefile.2  Makefile.in  Makefile~  libgcj.spec
gcc/gcc/libobjc/: Makefile  thr-posix.c
gcc/gcc/libstdc/: Makefile
gcc/gcc/libsupc++/: Makefile
gcc/gcc/zlib/: Makefile
gcc/include/: filenames.h  gettext.h
gcc/libiberty/: Makefile  config.h  pex-unix.c  pexecute.c  stpcpy.c  strsignal.c
gcc/libscl/: Copyright  Help  Makefile  Run,feb  Sprites,ff9  Sprites22,ff9  _os.s  _riscosify.s  assert.c  assert.h  ctype.h  endian.h  errno.h  fcntl.h  float.h  kernel.h  limits.h  locale.h  math.h  memory.h  open.c  open.s  riscos.c  setjmp.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  stubs.s  swis.h  time.h  uname.c  unistd.c  unistd.h  varargs.h
gcc/libscl/gcc-compat/: divdi3.s
gcc/libscl/math/: acosf.s  atan2l.s  atanl.s  copysignf.s  coshf.s  coshl.s  expf.s  fclrexcpt.s  fesetenv.s  fesetroun.s  finite.s  fraiseexc.s  hypotf.s  signbit.s  tanhf.s
gcc/libscl/stdio/: fdopen.c
gcc/libscl/stdlib/: _exit.c  div.c  strtof.c  strtold.c  strtoll.c  strtoull.c
gcc/libscl/string/: strdup.c
gcc/libscl/sys/: os.h  stat.h  times.h  types.h
gcc/libscl/time/: times.c
gcc/porting-scripts/: Makefile  Porting Tools.html  cp  ln  ranlib  rm  ro-ar  ro-config  ro-install  ro-libpack  ro-make  ro-path  ro-ranlib  ro-strip  strip  uname
gcc/riscos-aof/: Makefile  README
gcc/riscos-aof/arm-dis/: arm-dis.c
gcc/riscos-aof/as/: ChangeLog  Makefile  aoffile.h  area.c  area.h  asm.c  asm.h  cabs.s  chunkfile.h  code.c  code.h  commands.c  commands.h  config.h  decode.c  decode.h  depend.c  depend.h  elf.h  endian.c  endiandef.h  error.c  error.h  eval.c  eval.h  expr.c  expr.h  filestack.c  filestack.h  fix.c  fix.h  get.c  get.h  global.h  hash.c  hash.h  help_cop.c  help_cop.h  help_cpu.c  help_cpu.h  (+63 more)
gcc/riscos-aof/cmunge/: !Mk,fd7  !MkClean,fd7  !MkExamples,fd7  !MkRelease,fd7  Makefile  Makefile,fe1  MemCheck.h  README  VersionNum  assemble.c  assemble.h  blank.c  blank.h  comments.c  config.h  copyright.h  datestamp.c  format.c  format.h  gfile.c  gfile.h  main.c  options.c  options.h  readfile.c  readfile.h  str.c  str.h  system.c  throwback.c  throwback.h  writeexport.c  writeexport.h  writefile.c  writeheader.c
gcc/riscos-aof/decaof/: Makefile  README  config.h  decaof.h  decode.c  decode.h  error.c  error.h  io.c  io.h  main.c  main.h  misc.c  misc.h
gcc/riscos-aof/drlink/: Aoffiles.c  Areas.c  C++names.c  Chunkhdr.h  Debug.c  Debugprocs.h  Drlhdr.h  Drlink_doc  Drlmain.c  Filehdr.h  Files.c  Heap.c  Internals  Libraries.c  Linkdebug.c  Linkedit.c  Linkfiles.c  Makefile  Makefile1  Messages.c  Procdefs.h  Readme  Stdcode.c  Symbolhdr.h  Symbols.c  aoffiles.c  aofiles.c  areahdr.h  areas.c  c++names.c  chunkhdr.h  cobf.h  config.h  debug.c  debugprocs.h  drlhdr.h  drlmain.c  edithdr.h  filehdr.h  files.c  (+13 more)
gcc/riscos-aof/infozip/: Makefile  crc32.c  crctab.c  fileio.c  globals.c  osdep.h  tailor.h  unix.c  util.c  zip.c  zip.h  ziperr.h  zipup.c  zipup.h
gcc/riscos-aof/ld/: Makefile  README  ld.c  rname.c
gcc/riscos-aof/libfile/: Ar.cc  Ar.h  ArFile.cc  ArgParser.cc  ArgParser.h  BError.cc  BError.h  BException.cc  BException.h  BList.h  BString.cc  BString.h  Buffer.cc  Buffer.h  ChangeLog  Chunk.cc  Chunk.h  ChunkFile.cc  ChunkFile.h  LibData.cc  LibData.h  LibDir.cc  LibDir.h  LibFile.cc  LibFile_o.cc  LibTime.h  LibTimeBas.cc  LibTimeBas.h  LibVersion.cc  LibVersion.h  Librarian.cc  Librarian.h  Library.cc  Library.h  Makefile  OS_CnvtDT.s  OS_File.s  OS_GBPB.s  OS_Word.s  ObjFile.cc  (+11 more)
gcc/riscos-dist/: !Help  !Run,feb  Boot,feb  Changes  Help  Makefile  Run,feb  SetFTypes
gcc/riscos-elf/: README
gcc/riscos-libs/: Makefile
gcc/riscos-misc/: Makefile  README
gcc/riscos-progs/: Makefile  README
gcc/scripts/: build-testsuite.pl  compile-tests.pl  install-headers.pl  install-source.pl  merge-unixlib.sh
gcc/unixlib/: !Help  !MKDir,feb  !Sprites,ff9  !Sprites22,ff9  .cvsignore  Boot,feb  MKDir,feb  Makefile  Makefile.in  Run,feb  Setup,feb  Sprites,ff9  Sprites22,ff9  gen-makefiles.pl
tools/asasm/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  decaof  elftoolchain
tools/decaof/: ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  decaof.h  decode.c  decode.h  error.c  error.h  io.c  io.h  main.c  main.h  misc.c  misc.h
(+10414 files in other folders)
